
 * antispam.py: corregido otro fallo en la consulta sql usada para añadir
   nuevos filtros a la base de datos.
 * antispam.py: eliminado codigo residual de una antigua prueba.
 * antispam.py: corregido un fallo en el sistema anti spambots.
 * antispam.py: pequeña correccion de formato.
 * media.py: dos correcciones de formato.
 * media.py: corregido un comentario.

2009-12-11  GatoLoko  <GatoLoko@gmail.com>

 * remotos.py: revision completa del modulo y adaptado para gestionar los
   remotos en la base de datos.
 * gatoscript.db: agregada la tabla "remotos".
 * protecciones.py: arreglados varios errores de formato.
 * antispam.py: corregido un fallo en la consulta sql usada para añadir nuevos
   filtros a la base de datos.
 * notas.py: agregado nuevo modulo para gestionar notas.
 * gatoscript.py: activados los modulos: remotos.py y notas.py
 * ejemplo.py: arreglados algunos comentarios.

2009-12-06  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: agregada una excepcion al anti_notice para que no expulse
   al bot de gestion de canales de IRC-Hispano.

2009-12-01  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: agregadas las funciones gatodb_cusor_execute() y
   gatodb_commit() para centralizar el acceso a la base de datos en un solo
   modulo.
 * auxiliar.py: cambiadas algunas variables para que sean privadas del modulo.
 * rss.py: modificado para usar el acceso a la base de datos mediante las
   funciones del modulo auxiliar.
 * protecciones.py: varios arreglos de formato.
 * antispam.py: modificado para usar el acceso a la base de datos mediante las
   funciones del modulo auxiliar.
 * antispam.py: reformas y arreglos varios.
 * gatoscript.db: agregados varios filtros y mejorados algunos de los ya
   existentes para ser mas eficientes.
 * whois.py: agregado el docstring a la funcion espacios.
 * whois.py: multiples arreglos de formato y eliminadas lineas innecesarias.
 * sysinfo.py: multiples arreglos de formato y eliminadas lineas innecesarias.